--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>William Santos Dev</title>
   <meta name="description" content="Desenvolvedor Front-End e Designer localizado em Curitiba-PR">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
