--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
 
 <body>
   <header class="header">
-    <img src="./img/logo.svg" alt="Logo" class="logo">
+    <a href="index.html">
+      <img src="./img/logo.svg" alt="Logo" class="logo">
+    </a>
     <nav>
       <ul class="header-menu">
         <li><a href="./index.html#experiencia">Experiência</a></li>
