--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>William Santos Dev</title>
   <meta name="description" content="Desenvolvedor Front-End e Designer localizado em Curitiba-PR">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +31,9 @@
     <div>
       <h1 class="apresentacao">Olá, eu sou William Santos, <br> Desenvolvedor Front End & <br>UX/UI Designer</h1>
       <p>Localizado em Curitiba &#128205</p>
+      <div class="download">
+        <a href="https://drive.google.com/file/d/1FNgctz-DSN_NbCzF9REy-WKh5Pp2LMFi/view?usp=drive_link">Download Currículo</a>
+      </div>
     </div>
   </main>
 
