--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>William Santos Dev</title>
   <meta name="description" content="Desenvolvedor Front-End e Designer localizado em Curitiba-PR">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,8 +30,80 @@
   </header>
   <main class="introducao">
     <div>
-      <h1 class="apresentacao">Esta Página está em Construção.</h1>
+      <h1 class="apresentacao">Aqui estão meus projetos:</h1>
   </main>
+
+  <section aria-label="Experiência" class="experiencia" id="experiencia">
+    <h2 class="subtitulo">portfolio</h2>
+    <div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2025</span>
+        <h3 class="empresa-titulo">Logística Fácil</h3>
+        <span class="empresa-titulo"></span>
+        <p class="empresa-texto">Site de uma escola fictícia de cursos voltados para logística.</p>
+        <img src="./img/lf.png" class="site-lf">
+      </div>
+      <div class="visite">
+        <a href="">Visite o Site</a>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2021 - 2024</span>
+        <h3 class="empresa-titulo">Brasquimica Transportes Rodoviários</h3>
+        <span class="empresa-titulo">Analista de Transportes</span>
+        <p class="empresa-texto">Planejamento logístico, controle de manutenções programadas e corretivas. Responsável por aquisições de peças e serviços.</p>
+
+        <ul class="empresa-habilidades">
+          <li>Excel</li>
+          <li>Power BI</li>
+          <li>Protheus</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2019 - 2021</span>
+        <h3 class="empresa-titulo">Ritmo Logística</h3>
+        <span class="empresa-titulo">Analista de Operações</span>
+        <p class="empresa-texto">Dedicado ao cliente White Martins. Programação logística no transporte de gases. Elaboração de escala de motoristas. </p>
+        <ul class="empresa-habilidades">
+          <li>Excel</li>
+          <li>Power BI</li>
+          <li>KMM</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2013 - 2019</span>
+        <h3 class="empresa-titulo">Tursan Turismo e Fretamento</h3>
+        <span class="empresa-titulo">Escalador</span>
+        <p class="empresa-texto">Responsável pela programação diária das linhas de fretamento contínuo e eventual (turismo). Supervisão de lançamento de horas e fechamento de jornada dos motoristas.</p>
+        <ul class="empresa-habilidades">
+          <li>Excel</li>
+          <li>Globus</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <footer class="footer" id="contato">
     <div class="footer-container">
