--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         Desenvolvo pequenos projetos, utilizando apenas <strong> HTML, CSS e JavaScript</strong>. Estou em transição de carreira, aprimorando meu portfólio com trabalhos <strong> freelancer.</strong>
       </p>
       <div class="empresa">
+        <span class="empresa-ano">2025</span>
+        <h3 class="empresa-titulo">Desenvolvedor de Sites</h3>
+        <span class="empresa-titulo"></span>
+        <p class="empresa-texto">Desenvolvedor Frrelancer de sites em WordPress, e também pequenos projetos com HTML, CSS e JavaScript.</p>
+
+        <ul class="empresa-habilidades">
+          <li>WordPress</li>
+          <li>Elementor</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
         <span class="empresa-ano">2021 - 2024</span>
         <h3 class="empresa-titulo">Brasquimica Transportes Rodoviários</h3>
         <span class="empresa-titulo">Analista de Transportes</span>
