--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <span class="empresa-ano">2025</span>
         <h3 class="empresa-titulo">Logística Fácil</h3>
         <span class="empresa-titulo"></span>
-        <p class="empresa-texto">Site de uma escola fictícia de cursos voltados para logística.<br><br> Na cosntrução das páginas, utilizei os pluggins Spectra, para contrução das páginas. E o Pluggin Loco, para a tradução do tema. <br><br>O tema utlizado foi o Astra.</p>
+        <p class="empresa-texto">Site de uma escola fictícia de cursos voltados para logística.<br><br> Na cosntrução das páginas, utilizei o pluggin Spectra, para contrução das páginas. E o Pluggin Loco, para a tradução do tema. <br><br>O tema utlizado foi o Astra.</p>
 
         <img src="./img/lf.png" class="site-lf">
       </div>
