Site Paes Brigaderia

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,13 +41,26 @@
         <span class="empresa-ano">2025</span>
         <h3 class="empresa-titulo">Logística Fácil</h3>
         <span class="empresa-titulo"></span>
-        <p class="empresa-texto">Site de uma escola fictícia de cursos voltados para logística.<br><br> Na cosntrução das páginas, utilizei o pluggin Spectra, para contrução das páginas. E o Pluggin Loco, para a tradução do tema. <br><br>O tema utlizado foi o Astra.</p>
+        <p class="empresa-texto">Site de uma escola fictícia de cursos voltados para logística.<br><br> Na construção das páginas, utilizei o pluggin Spectra, para contrução das páginas. E o Pluggin Loco, para a tradução do tema. <br><br>O tema utlizado foi o Astra.</p>
 
         <img src="./img/lf.png" class="site-lf">
       </div>
       <div class="visite">
         <a href="https://dev-logisticafacil.pantheonsite.io/">Visite o Site</a>
       </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2025</span>
+        <h3 class="empresa-titulo">Paes Brigaderia</h3>
+        <span class="empresa-titulo"></span>
+        <p class="empresa-texto">Landing Page para uma loja de doces goumert, que atende Curitiba e Região.<br><br> Na cosntrução, utilizei o pluggin Elementor (Free). Para construção de cabeçalho, o pluggin Elementor Header & Footer Builder, e WP Forms para o formulário de contato. <br><br>O tema utlizado foi o Hello Elementor.</p>
+
+        <img src="./img/paesbrigaderia.png" class="site-lf">
+      </div>
+      <div class="visite">
+        <a href="https://dev-paesbrigaderia.pantheonsite.io/">Visite o Site</a>
+      </div>
+
 
 
 
